# ml-mechanic

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
lib/: ml-mechanic-stack.ts
test/: ml-mechanic.test.ts
tools/cdk/dynamodb/: .gitignore  cdk.context.json  cdk.json  package-lock.json  package.json
tools/cdk/dynamodb/lib/: dynamodb-stack.ts
tools/cli/dynamodb/: Cargo.toml
tools/cli/dynamodb/src/: main.rs
tools/dataverse/: Cargo.toml  Dockerfile
tools/dataverse/src/: main.rs
tools/sls/dynamodb/: Cargo.toml  Dockerfile
tools/sls/dynamodb/create/: Cargo.toml  Dockerfile
tools/sls/dynamodb/create/src/: main.rs
tools/sls/dynamodb/read/: Cargo.toml  Dockerfile
tools/sls/dynamodb/read/src/: main.rs
tools/sls/dynamodb/src/: main.rs
tools/sls/dynamodb/write/: Cargo.toml  Dockerfile
tools/sls/dynamodb/write/src/: main.rs
tools/sls/spanner/: Cargo.toml  Dockerfile
tools/spanner/: Cargo.toml  Dockerfile
tools/spanner/src/: main.rs
vpc/: cdk.context.json  package-lock.json  package.json
