[package]
name = "dataverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.4.0"
aws-sdk-dynamodb = "0.4.0"
env_logger = "0.9.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.5"
