[package]
name = "spanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.73"
tokio = {version = "1.14.0", features = ["full"]}
hyper = {version = "0.14", features = ["full"]}

[[bin]]
name = "bootstrap"
path = "src/main.rs"
