[package]
name = "dynamodb-create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.4.1"
aws-sdk-dynamodb = "0.4.1"
aws-sdk-s3 = "0.4.1"
env_logger = "0.9.0"
lambda_runtime = "0.4.1"
log = "0.4.14"
serde_json = "1.0.75"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.6"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
